--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <org.springframework-version>3.2.18.RELEASE</org.springframework-version>
         <org.springframework.security-version>3.2.10.RELEASE</org.springframework.security-version>
         <spring-fox-version>2.6.1</spring-fox-version>
+        <io.jsonwebtoken-version>0.11.2</io.jsonwebtoken-version>
     </properties>
 
     <dependencies>
@@ -116,8 +117,22 @@
         <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <artifactId>jjwt-api</artifactId>
+            <version>${io.jsonwebtoken-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${io.jsonwebtoken-version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+            <version>${io.jsonwebtoken-version}</version>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
