--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <org.springframework.security-version>3.2.10.RELEASE</org.springframework.security-version>
         <spring-fox-version>2.6.1</spring-fox-version>
         <io.jsonwebtoken-version>0.11.1</io.jsonwebtoken-version>
+        <org.aspectj-version>1.9.6</org.aspectj-version>
     </properties>
 
     <dependencies>
@@ -132,6 +133,28 @@
             <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
             <version>${io.jsonwebtoken-version}</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <!-- AOP 라이브러리 -->
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${org.aspectj-version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${org.aspectj-version}</version>
         </dependency>
 
     </dependencies>
