--- a/pom.xml
+++ b/pom.xml
@@ -157,5 +157,13 @@
             <version>${org.aspectj-version}</version>
         </dependency>
 
+        <!-- HttpServlet 라이브러리 -->
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
