--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,14 @@
         <spring-fox-version>2.6.1</spring-fox-version>
         <io.jsonwebtoken-version>0.11.1</io.jsonwebtoken-version>
         <org.aspectj-version>1.9.6</org.aspectj-version>
+        <properties>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <maven.compiler.source>1.8</maven.compiler.source>
+            <maven.compiler.target>1.8</maven.compiler.target>
+        </properties>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-resources-plugin</artifactId>
-            <version>2.4.3</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
